--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,16 @@
             <version>2.0.6</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-chrome-driver -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-chrome-driver</artifactId>
+            <version>4.8.1</version>
+        </dependency>
+
     </dependencies>
+
+
 
 </project>
