page object model created for login and sign up page

--- a/configuration.properties
+++ b/configuration.properties
@@ -30,7 +30,7 @@ yearOfBirth=1990
 first_name= test
 last_name=test
 company=amazon
-addressLine1=Daisy Street. 
+addressLine1=Daisy Street
 addressLine2= 101NE
 country=United States
 city=Oklahoma City
